--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <header class="header">
         <div class="container">
             <div class="row center-vertical">
-                <h1 class="col-md-4 center-vertical"><img src="images/logo.svg" alt="logo"></h1>
-                <nav class="col-md-8">
-                    <ul class="menu">
+                <h1 class="col-md-3 center-vertical"><img src="images/logo.svg" alt="logo"></h1>
+                <input type="checkbox" name="toggle-menu" id="toggle-menu" class="checkbox">
+                <label id="nav-icon3" for="toggle-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <nav class="col-md-9 menu">
+                    <ul class="menu_ul">
                         <li class="menu_list"><a class="menu_list_enlace" href="#home">Home</a></li>
                         <li class="menu_list"><a class="menu_list_enlace" href="#caracteristicas">Caracteristicas</a></li>
                         <li class="menu_list"><a class="menu_list_enlace" href="#screenshots">Screnshots</a></li>
@@ -86,10 +93,10 @@
                         <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
                     </div>
                 </div>
-                    <div class="row center-vertical">
-                        <div class="col-md-4 text-align"><img src="images/mockupApp2.png" alt="mockup2"></div>
+                    <div class="row center-vertical pre_features">
+                        <div class="col-md-4 text-align features_img"><img src="images/mockupApp2.png" alt="mockup2"></div>
                         <div class="col-md-8">
-                            <div class="row ">
+                            <div class="row">
                                 <div class="col-md-6">
                                     <div class="features">
                                         <h5 class="feature_subtitle">Confiable y Segura</h5>
@@ -202,11 +209,11 @@
                 <div class="row">
                     <form action="#" class="col-md-7 col-sm-12" method="POST">
                         <div class="row">
-                            <input class="form_input col-md-6" type="text" name="nombre" placeholder="Nombre o Empresa">
-                            <input class="form_input col-md-6" type="email" name="email" id="#" placeholder="Email">
-                            <input class="form_input col-md-12" type="text" name="asunto" placeholder="Asunto">
-                            <textarea class="form_input col-md-12" rows="8" name="text" id="#" placeholder="Mensaje"></textarea>
-                            <input class="form_button" type="submit" value="ENVIAR">
+                            <input class="form_input col-md-6 col-sm-6 col-xs-12" type="text" name="nombre" placeholder="Nombre o Empresa">
+                            <input class="form_input col-md-6 col-sm-6 col-xs-12" type="email" name="email" id="#" placeholder="Email">
+                            <input class="form_input col-md-12 col-sm-12 col-xs-12" type="text" name="asunto" placeholder="Asunto">
+                            <textarea class="form_input col-md-12 col-sm-12 col-xs-12" rows="8" name="text" id="#" placeholder="Mensaje"></textarea>
+                            <input class="form_button col-sm-3 col-xs-12" type="submit" value="ENVIAR">
                         </div>
                     </form>
                     <div class="col-md-4 col-sm-12 contact_info">
