--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 </label>
                 <nav class="col-md-9 menu">
                     <ul class="menu_ul">
-                        <li class="menu_list"><a class="menu_list_enlace" href="#home">Home</a></li>
-                        <li class="menu_list"><a class="menu_list_enlace" href="#caracteristicas">Caracteristicas</a></li>
-                        <li class="menu_list"><a class="menu_list_enlace" href="#screenshots">Screnshots</a></li>
-                        <li class="menu_list"><a class="menu_list_enlace" href="#contactanos">Contactanos</a></li>
+                        <li class="menu_list"><a class="menu_list_enlace" href="#home">Inicio</a></li>
+                        <li class="menu_list"><a class="menu_list_enlace" href="#caracteristicas">Características</a></li>
+                        <li class="menu_list"><a class="menu_list_enlace" href="#screenshots">Screenshots</a></li>
+                        <li class="menu_list"><a class="menu_list_enlace" href="#contactanos">Contáctanos</a></li>
                         <li class="menu_list"><a class="button_descargar" href="#"><span class="button_descargar_spam">Descargar</span></a></li>
                     </ul>
                 </nav>
@@ -64,7 +64,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
-                        <h3 class="subtitle">¿Como Funciona?</h3>
+                        <h3 class="subtitle">¿Cómo Funciona?</h3>
                         <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
                     </div>
                     <div class="col-md-4 text-align">
@@ -89,7 +89,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
-                        <h3 class="subtitle">Caracteristicas De la App</h3>
+                        <h3 class="subtitle">Características De la App</h3>
                         <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
-                        <h3 class="subtitle white">Estadisticas</h3>
+                        <h3 class="subtitle white">Estadísticas</h3>
                         <p class="subtitle-text white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                 </div>
             </div>
         </section>
-        <section class="margin-section">
+        <section id="testimonios" class="margin-section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
@@ -202,7 +202,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
-                        <h3 class="subtitle">Contactanos</h3>
+                        <h3 class="subtitle">Contáctanos</h3>
                         <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
                     </div>
                 </div>
