--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media-queries.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-grid-only@1.0.0/bootstrap.css">
     <title>Meet Cine</title>
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <div class="row center-vertical">
-                <h1 class="col-md-3 center-vertical"><img src="images/logo.svg" alt="logo"></h1>
-                <input type="checkbox" name="toggle-menu" id="toggle-menu" class="checkbox">
-                <label id="nav-icon3" for="toggle-menu">
+            <div class="row center-vertical header_fake">
+                <h1 class="col-md-3 center-vertical logo"><img src="images/logo.svg" alt="logo"></h1>
+                <label class="menu-icon" id="nav-icon3" for="toggle-menu">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -68,17 +68,17 @@
                         <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
                     </div>
                     <div class="col-md-4 text-align">
-                        <img src="images/match.svg" alt="match">
+                        <img class="icons_steps" src="images/match.svg" alt="match">
                         <h5 class="feature_subtitle">¡Haz Match!</h5>
                         <p class="feature_text">Sed ut perspiciatis unde omnis<br>iste natus error sit voluptatem<br>accusantium doloremque</p>
                     </div>
-                    <div class="col-md-4 text-align">
-                        <img src="images/chat.svg" alt="chat">
+                    <div class="col-md-4 text-align steps">
+                        <img class="icons_steps" src="images/chat.svg" alt="chat">
                         <h5 class="feature_subtitle">¡Chatea!</h5>
                         <p class="feature_text">Sed ut perspiciatis unde omnis<br>iste natus error sit voluptatem<br>accusantium doloremque</p>
                     </div>
-                    <div class="col-md-4 text-align">
-                        <img src="images/tickets.svg" alt="tickets">
+                    <div class="col-md-4 text-align steps">
+                        <img class="icons_steps" src="images/tickets.svg" alt="tickets">
                         <h5 class="feature_subtitle">¡Vayan al Cine Juntos!</h5>
                         <p class="feature_text">Sed ut perspiciatis unde omnis<br>iste natus error sit voluptatem<br>accusantium doloremque</p>
                     </div>
@@ -94,10 +94,10 @@
                     </div>
                 </div>
                     <div class="row center-vertical pre_features">
-                        <div class="col-md-4 text-align features_img"><img src="images/mockupApp2.png" alt="mockup2"></div>
-                        <div class="col-md-8">
+                        <div class="col-md-4 col-sm-12 text-align features_img"><img src="images/mockupApp2.png" alt="mockup2"></div>
+                        <div class="col-md-8 col-sm-12">
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-md-6 col-sm-6">
                                     <div class="features">
                                         <h5 class="feature_subtitle">Confiable y Segura</h5>
                                         <p class="feature_text">La aplicación a tomado<br>precaución en los riesgos posibles.</p>
@@ -107,7 +107,7 @@
                                         <p class="feature_text">Más de  70 mil usuarios<br>registrados y activos.</p>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 col-sm-6">
                                     <div class="features">
                                         <h5 class="feature_subtitle">Facil de Usar</h5>
                                         <p class="feature_text">Aplicación diseñada con<br>experiencia de usuario y usabilidad.</p>
