--- a/index.html
+++ b/index.html
@@ -7,28 +7,27 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media-queries.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-grid-only@1.0.0/bootstrap.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <title>Meet Cine</title>
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <div class="row center-vertical header_fake">
-                <h1 class="col-md-3 center-vertical logo"><img src="images/logo.svg" alt="logo"></h1>
-                <label class="menu-icon" id="nav-icon3" for="toggle-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-                <nav class="col-md-9 menu">
-                    <ul class="menu_ul">
-                        <li class="menu_list"><a class="menu_list_enlace" href="#home">Inicio</a></li>
-                        <li class="menu_list"><a class="menu_list_enlace" href="#caracteristicas">Características</a></li>
-                        <li class="menu_list"><a class="menu_list_enlace" href="#screenshots">Screenshots</a></li>
-                        <li class="menu_list"><a class="menu_list_enlace" href="#contactanos">Contáctanos</a></li>
-                        <li class="menu_list"><a class="button_descargar" href="#"><span class="button_descargar_spam">Descargar</span></a></li>
-                    </ul>
+            <div class="row center-vertical">
+                <nav class="navbar navbar-expand-lg navbar-dark col-md-12">
+                    <h1 class="center-vertical logo"><img src="images/logo.svg" alt="logo"></h1>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="menu_ul navbar-nav ml-auto">
+                            <li class="nav-item menu_list"><a class="nav-link menu_list_enlace" href="#home">Inicio</a></li>
+                            <li class="nav-item menu_list"><a class="nav-link menu_list_enlace" href="#caracteristicas">Características</a></li>
+                            <li class="nav-item menu_list"><a class="nav-link menu_list_enlace" href="#screenshots">Screenshots</a></li>
+                            <li class="nav-item menu_list"><a class="nav-link menu_list_enlace" href="#contactanos">Contáctanos</a></li>
+                            <li class="nav-item menu_list"><a class="nav-link button_descargar" href="#"><span class="button_descargar_spam">Descargar</span></a></li>
+                        </ul>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -36,7 +35,7 @@
     <main>
         <section id="home" class="center-vertical">
             <div class="container">
-                <div class="frase-home"><h2>La aplicación para conseguir<br>compañía para cine que estabas<br> esperando llego al Perú</h2></div>
+                <div class="frase-home"><h2 class="font-weight-bold">La aplicación para conseguir<br>compañía para cine que estabas<br> esperando llego al Perú</h2></div>
                 <div>
                     <a href="#">
                         <svg width="300" height="74" viewBox="0 0 300 74" fill="none" xmlns="http://www.w3.org/2000/svg" class="callToAction svg-fill">
@@ -207,7 +206,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <form action="#" class="col-md-7 col-sm-12" method="POST">
+                    <form action="#" class="col-lg-7 col-sm-12 form" method="POST">
                         <div class="row">
                             <input class="form_input col-md-6 col-sm-6 col-xs-12" type="text" name="nombre" placeholder="Nombre o Empresa">
                             <input class="form_input col-md-6 col-sm-6 col-xs-12" type="email" name="email" id="#" placeholder="Email">
@@ -216,7 +215,7 @@
                             <input class="form_button col-sm-3 col-xs-12" type="submit" value="ENVIAR">
                         </div>
                     </form>
-                    <div class="col-md-4 col-sm-12 contact_info">
+                    <div class="col-lg-4 col-sm-12 contact_info">
                         <h5>¿Alguna Duda?</h5>
                         <div class="contact_info_list">
                             <div class="contact_info_list_icon"><i class="icon-mail"></i></div>
@@ -251,6 +250,7 @@
     </footer>
     <script type="text/javascript" src="js/lib/jquery.min.js"></script>
     <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
