change lorem ipsum

--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
                         <h3 class="subtitle">¿Cómo Funciona?</h3>
-                        <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
+                        <p class="subtitle-text">Bienvenido a Meet Cine© la aplicación que te va a ayudar a<br>conseguir la compañía ideal para ir al cine</p>
                     </div>
                     <div class="col-md-4 text-align">
                         <img class="icons_steps" src="images/match.svg" alt="match">
                         <h5 class="feature_subtitle">¡Haz Match!</h5>
-                        <p class="feature_text">Sed ut perspiciatis unde omnis<br>iste natus error sit voluptatem<br>accusantium doloremque</p>
+                        <p class="feature_text">Navega entre los cientos de<br>personas registradas y encuentra la<br>pareja ideal para ir al cine</p>
                     </div>
                     <div class="col-md-4 text-align steps">
                         <img class="icons_steps" src="images/chat.svg" alt="chat">
                         <h5 class="feature_subtitle">¡Chatea!</h5>
-                        <p class="feature_text">Sed ut perspiciatis unde omnis<br>iste natus error sit voluptatem<br>accusantium doloremque</p>
+                        <p class="feature_text">Dentro de nuestro chat coincidan<br>en un día para que puedan comprar su<br>entradas e ir al cine juntos</p>
                     </div>
                     <div class="col-md-4 text-align steps">
                         <img class="icons_steps" src="images/tickets.svg" alt="tickets">
                         <h5 class="feature_subtitle">¡Vayan al Cine Juntos!</h5>
-                        <p class="feature_text">Sed ut perspiciatis unde omnis<br>iste natus error sit voluptatem<br>accusantium doloremque</p>
+                        <p class="feature_text">Y llego el gran día, vayan al cine<br>y disfruten de la película en compañía<br>de la persona que hicieron match</p>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
                         <h3 class="subtitle">Características De la App</h3>
-                        <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
+                        <p class="subtitle-text">Estas son una las tantas características que hacen que nuestra<br>aplicación sea la mejor dentro de su rubro</p>
                     </div>
                 </div>
                     <div class="row center-vertical pre_features">
@@ -126,7 +126,7 @@
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
                         <h3 class="subtitle">App Screenshots</h3>
-                        <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
+                        <p class="subtitle-text">Mira como nuestra aplicación tiene un diseño visual atractivo<br>para el fácil uso de sus usuarios</p>
                     </div>
                 </div> 
                 <div class="row owl-carousel">
@@ -146,7 +146,7 @@
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
                         <h3 class="subtitle white">Estadísticas</h3>
-                        <p class="subtitle-text white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
+                        <p class="subtitle-text white">Hecha un vistazo a como nuestra aplicación esta impactando<br>la vida de miles de personas</p>
                     </div>
                 </div>
                 <div class="row">
@@ -174,7 +174,7 @@
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
                         <h3 class="subtitle">Testimonios</h3>
-                        <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
+                        <p class="subtitle-text">Descubre todo lo que nuestros usuarios dicen y<br>opinan sobre nuestra App</p>
                     </div>
                 </div>
                 <div class="row owl-carousel2">
@@ -202,7 +202,7 @@
                 <div class="row">
                     <div class="col-md-12 text-align margin-subtitle">
                         <h3 class="subtitle">Contáctanos</h3>
-                        <p class="subtitle-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore</p>
+                        <p class="subtitle-text">Si tiene alguna pregunta, solo complete el formulario de contacto<br>y le responderemos en breve.</p>
                     </div>
                 </div>
                 <div class="row">
